<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:configChanges="orientation"
    android:screenOrientation="portrait"
    tools:ignore="LockedOrientationActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/postRecipeFragment"
    tools:context=".fragments.PostRecipeFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/recipeName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/EnterName"
                        android:textAlignment="textStart"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/nameInput"
                        style="@style/Widget.AppCompat.AutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:ems="10"
                        android:fontFamily="sans-serif-black"
                        android:importantForAutofill="no"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="10sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recipeName" />

                    <TextView
                        android:id="@+id/ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/EnterIngredients"
                        android:textAlignment="textStart"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

                    <EditText
                        android:id="@+id/ingredientsList"
                        style="@style/Widget.AppCompat.AutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:ems="10"
                        android:fontFamily="sans-serif-black"
                        android:hint="@string/EnterIngredientList"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLength="2000"
                        android:maxLines="20"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="10sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ingredients" />

                    <TextView
                        android:id="@+id/instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/EnterInstructions"
                        android:textAlignment="textStart"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ingredientsList" />

                    <EditText
                        android:id="@+id/instructionsList"
                        style="@style/Widget.AppCompat.AutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:ems="10"
                        android:fontFamily="sans-serif-black"
                        android:hint="@string/EnterInstructionsList"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLength="2000"
                        android:maxLines="20"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="10sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/instructions" />


                    <LinearLayout
                        android:id="@+id/postRecipeLinearLayout1"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/instructionsList">

                        <TextView
                            android:id="@+id/personNb"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/EnterPersonNb"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/personNbInput"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:textAlignment="textStart"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/prepTime"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/EnterPrepTime"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/prepTimeInput"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:fadeScrollbars="true"
                            android:fontFamily="sans-serif-black"
                            android:textAlignment="textStart"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/cookTime"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/EnterCookTime"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/cookTimeInput"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:textAlignment="textStart"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <Space
                        android:id="@+id/verticalSpace"
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/postRecipeLinearLayout1" />

                    <TextView
                        android:id="@+id/recipeDifficulty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/EnterDifficulty"
                        android:textAlignment="textStart"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/verticalSpace" />

                    <Spinner
                        android:id="@+id/difficultyInput"
                        style="?android:attr/spinnerDropDownItemStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="sans-serif-black"
                        android:prompt="@string/difficulty_prompt"
                        android:spinnerMode="dialog"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recipeDifficulty" />

                    <RelativeLayout
                        android:id="@+id/postRecipeRelativeOutput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/difficultyInput">

                        <LinearLayout
                            android:id="@+id/miniatureLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/miniature"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-black"
                                android:text="@string/UploadMiniature"
                                android:textSize="12sp" />

                            <ImageView
                                android:id="@+id/miniaturePreview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/pictures"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="15dp"
                                android:fontFamily="sans-serif-black"
                                android:text="@string/UploadPictures"
                                android:textSize="12sp"
                                android:visibility="visible" />

                            <TextView
                                android:id="@+id/mealPicturesText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />


                        </LinearLayout>

                    </RelativeLayout>

                    <Space
                        android:id="@+id/verticalSpace2"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/postRecipeRelativeOutput" />

                    <RelativeLayout
                        android:id="@+id/postRecipeRelativeOutput2"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/verticalSpace2">

                        <Button
                            android:id="@+id/postRecipe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/PostRecipe"
                            android:textSize="12sp"
                            android:visibility="visible" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/errorLogs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="sans-serif-black"
                        android:textAlignment="textStart"
                        android:textSize="12sp"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/postRecipeRelativeOutput2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>