<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cookingInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/personNb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:fontFamily="sans-serif-black"
        android:text="@string/EnterPersonNb"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/personNbInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/personNbInput"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/prepTime"
        app:layout_constraintStart_toEndOf="@+id/personNb"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prepTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:fontFamily="sans-serif-black"
        android:text="@string/EnterPrepTime"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/prepTimeInput"
        app:layout_constraintStart_toEndOf="@+id/personNbInput"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/prepTimeInput"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fadeScrollbars="true"
        android:fontFamily="sans-serif"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cookTime"
        app:layout_constraintStart_toEndOf="@+id/prepTime"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cookTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fontFamily="sans-serif-black"
        android:text="@string/EnterCookTime"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cookTimeInput"
        app:layout_constraintStart_toEndOf="@+id/prepTimeInput"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cookTimeInput"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cookTime"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>